* fixed settings.json to include default slideshow images * fixed small bug with glitchy slideshow transitions * fixed bug with horizontal scrolling in options menu, fixes #56

--- a/source/stylesheets/product.css.scss
+++ b/source/stylesheets/product.css.scss
@@ -177,8 +177,9 @@
 }
 .options-list {
   background: #{"{{theme.background_color}}"};
+  height:auto;
   max-height: 200px;
-  overflow: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 .options-list li {
