--- a/source/stylesheets/products.css.scss
+++ b/source/stylesheets/products.css.scss
@@ -181,6 +181,7 @@
 }
 .home-slideshow {
   margin-left: 80px;  
+  @include translateZ(0);
 }
 .slideshow-stripe {
   width: 80px;
